# unicom-mediaserver

./: .gitignore  app.py  config.toml  file_maker.py  library_config.toml.example  local_maker.py  main.py  movie_maker.py  parse_json_request.py  setup.sh  start_daemon.sh  start_venv.sh  unicom.py  update.sh
js/: base.js  collection.js  movies.js  person.js  tvs.js  videos.js
medialibrary/: Cargo.toml
medialibrary/src/: lib.rs
medialibrary/src/database/: collection.rs  mod.rs  movie.rs  person.rs  tv.rs  video.rs
medialibrary/src/rustmdb/: mod.rs  model.rs  movie.rs  tv.rs
templates/: collection.html  collections.html  create_collection.html  custom_pagination.html  episode.html  get_collection.html  index.html  movie.html  movies.html  moviesearch.html  nav.html  person.html  persons.html  season.html  tv.html  tvs.html  tvsearch.html  video.html  videos.html
