[package]
name = "medialibrary"
version = "0.1.3"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "medialibrary"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.16.0"
features = ["extension-module", "multiple-pymethods"]

[dependencies.reqwest]
version = "0.11.9"
features = ["blocking", "json"]

[dependencies]
rusqlite = "0.27.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
strsim = "0.10.0"
lazy_static = "1.4.0"
regex = "1.5.5"